test3/css/style.css
@charset "utf8";

/* css reset */

*{
	margin: 0 auto;
	list-style: none;
	font-family: "맑은 고딕";
	padding: 0;
}
html, body {
  background-color: #fff;
  min-width: 1000px;
  color: #996699;
}
img {
  max-width: 100%;
  display: block;
}
.all {
  width: 100%;
  float: left;
}
.wrap {
  width: 1000px;

}
.content {
  width: 1000px;
}
a {
  text-decoration: none;
  color: #666;
}
.clear {
  clear: both;
  position: inherit;
}

/* header and logo section */
header {
  height: 180px;
}
.header_logo {
 padding-top: 20px;
}
.logo {
  height: 100px;
  overflow: hidden;
  float: left;
}
div.logo > a > img {
  width: 300px;
}

nav {
  float: right;
  margin-top: 10px;
  padding: 10px;
}
.nav {
  width: 600px;
  height: 20px;

}
.nav > li {
  float: left;
  width: 200px;
  padding: 10px 0;
  text-align: center;
  position: relative;
  transition: all 0.4s;
}
.nav > li:after {
  clear: both;
}
.nav > li:hover {
  color: #fff;
  background-color: #996699;
}

.submenu {
  background-color: rgba(255,255,255,0.8);
  margin-top: 5px;
  position: absolute;
  z-index: 5;
  width: 100%;
  display: none;
}
.submenu > li {
  padding: 5px 0;
  color: #000;
  transition: all 0.4s;
}
.submenu > li:hover {
  background-color: #cc9999;
  color: inherit;
}

